// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AlgebraBasePluginV1 #DynamicFeeManager #adaptiveFee single huge spike after day 1`] = `
Array [
  "Fee: 3000 ",
  "Fee: 3000 ",
  "Fee: 3000 ",
  "Fee: 3000 ",
  "Fee: 3000 ",
  "Fee: 3000 ",
  "Fee: 3000 ",
  "Fee: 3000 ",
  "Fee: 3000 ",
  "Fee: 3000 ",
  "Fee: 3000 ",
  "Fee: 3000 ",
  "Fee: 3000 ",
  "Fee: 3000 ",
  "Fee: 3000 ",
  "Fee: 3000 ",
  "Fee: 3000 ",
  "Fee: 3000 ",
  "Fee: 3000 ",
  "Fee: 3000 ",
  "Fee: 3000 ",
  "Fee: 3000 ",
  "Fee: 3000 ",
  "Fee: 3000 ",
  "Fee: 100 ",
]
`;

exports[`AlgebraBasePluginV1 #DynamicFeeManager #adaptiveFee single huge spike after initialization 1`] = `
Array [
  "Fee: 15000 ",
  "Fee: 15000 ",
  "Fee: 15000 ",
  "Fee: 15000 ",
  "Fee: 15000 ",
  "Fee: 15000 ",
  "Fee: 15000 ",
  "Fee: 14969 ",
  "Fee: 14849 ",
  "Fee: 14487 ",
  "Fee: 13689 ",
  "Fee: 12371 ",
  "Fee: 10695 ",
  "Fee: 8989 ",
  "Fee: 7515 ",
  "Fee: 6370 ",
  "Fee: 5527 ",
  "Fee: 4921 ",
  "Fee: 4486 ",
  "Fee: 4171 ",
  "Fee: 3940 ",
  "Fee: 3767 ",
  "Fee: 3637 ",
  "Fee: 3536 ",
  "Fee: 3337 ",
]
`;

exports[`AlgebraBasePluginV1 #DynamicFeeManager #adaptiveFee single huge step after day 1`] = `
Array [
  "Fee: 3000 ",
  "Fee: 15000 ",
  "Fee: 15000 ",
  "Fee: 15000 ",
  "Fee: 15000 ",
  "Fee: 15000 ",
  "Fee: 15000 ",
  "Fee: 15000 ",
  "Fee: 15000 ",
  "Fee: 15000 ",
  "Fee: 15000 ",
  "Fee: 15000 ",
  "Fee: 15000 ",
  "Fee: 15000 ",
  "Fee: 15000 ",
  "Fee: 15000 ",
  "Fee: 15000 ",
  "Fee: 15000 ",
  "Fee: 15000 ",
  "Fee: 15000 ",
  "Fee: 15000 ",
  "Fee: 15000 ",
  "Fee: 15000 ",
  "Fee: 15000 ",
  "Fee: 15000 ",
]
`;

exports[`AlgebraBasePluginV1 #DynamicFeeManager #adaptiveFee single huge step after initialization 1`] = `
Array [
  "Fee: 15000 ",
  "Fee: 15000 ",
  "Fee: 15000 ",
  "Fee: 15000 ",
  "Fee: 15000 ",
  "Fee: 15000 ",
  "Fee: 15000 ",
  "Fee: 15000 ",
  "Fee: 15000 ",
  "Fee: 15000 ",
  "Fee: 15000 ",
  "Fee: 15000 ",
  "Fee: 15000 ",
  "Fee: 15000 ",
  "Fee: 15000 ",
  "Fee: 15000 ",
  "Fee: 15000 ",
  "Fee: 15000 ",
  "Fee: 15000 ",
  "Fee: 15000 ",
  "Fee: 15000 ",
  "Fee: 15000 ",
  "Fee: 15000 ",
  "Fee: 15000 ",
  "Fee: 15000 ",
]
`;

exports[`AlgebraBasePluginV1 AlgebraBasePluginV1 external methods #changeFeeConfiguration feeConfig getter gas cost 1`] = `23713`;
